k8s/gateway-service-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service-app
  labels:
    app: gateway-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service-app
  template:
    metadata:
      labels:
        app: gateway-service-app
    spec:
      containers:
        - name: gateway-service-app
          image: karthicb92/gateway-service:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
  selector:
    app: gateway-service-app
