k8s/ingress-svc.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator-ingress
spec:
  rules:
  - host: karthi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-service-svc
            port:
              number: 80
